@startuml

title __TASK2's Class Diagram__\n

  namespace  {
    namespace om.example.task2 {
      class com.example.task2.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.task2 {
      class com.example.task2.HelloController {
          + colorpicker : ColorPicker
          + valuetext : TextField
          - canvas : Canvas
          - gc : GraphicsContext
          - welcomeText : Label
          + click()
          + click1()
          + click2()
          + click3()
          + initialize()
          + patclick()
          # Click()
      }
    }
  }
  

  com.example.task2.HelloApplication -up-|> javafx.application.Application
  com.example.task2.HelloController .up.|> javafx.fxml.Initializable
  com.example.task2.HelloController o-- com.example.task2.model.myShape : circ
  com.example.task2.HelloController o-- com.example.task2.model.myShape : rect
  com.example.task2.HelloController o-- com.example.task2.model.myShape : trig


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
